[package]
name = "rtask"
version = "0.1.0"
authors = ["Moritz Ulrich <moritz@tarn-vedra.de>"]

[dependencies]
ansi_term = "0.11.0"
env_logger = "0.5.10"
lazy_static = "1.0.1"
libc = "0.2.42"
log = "0.4.2"
failure = "0.1.1"
regex = "1.0.0"
rusqlite = "0.13.0"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"

[dependencies.chrono]
version = "0.4.2"
features = ["serde"]

[dependencies.uuid]
version = "0.6.5"
features = ["serde", "v4"]


