[package]
name = "rtask"
version = "0.1.0"
authors = ["Moritz Ulrich <moritz@tarn-vedra.de>"]

[dependencies]
ansi_term = "0.11.0"
chrono = { version = "0.4.4", features = ["serde"] }
env_logger = "0.5.10"
lazy_static = "1.0.2"
libc = "0.2.42"
log = "0.4.3"
failure = "0.1.1"
regex = "1.0.1"
rusqlite = { version = "0.13.0", features = ["chrono"] }
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.22"
uuid = { version = "0.6.5", features = ["serde", "v4"]}
derive_more = "0.11.0"


