[package]
name = "rtask_migrate"
version = "0.1.0"
authors = ["Moritz Ulrich <moritz@tarn-vedra.de>"]

[dependencies]
rustc-serialize = "0.3.24"
rusqlite = "0.13.0"
serde = "1.0.66"
serde_json = "1.0.20"
serde_derive = "1.0.66"
failure = "0.1.1"

[dependencies.time]
version = "0.1.40"
features = ["rustc-serialize"]

[dependencies.chrono]
version = "0.4.3"
features = ["serde", "rustc-serialize"]

[dependencies.uuid]
version = "0.6.5"
features = ["serde"]
